<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/loginVkImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layout_white_bg"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/vk"
        android:scaleType="centerInside"
        android:layout_above="@id/loginInfo"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:srcCompat="@drawable/ic_vk" />

    <TextView
        android:id="@+id/loginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/login_info"
        android:textColor="#2B2B2B"
        android:layout_centerVertical="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/loginLogin"
        style="@android:style/Widget.Holo.Button"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginInfo"
        android:background="@drawable/layout_button_bg"
        android:text="@string/login"
        android:onClick="loginLogin" />

</RelativeLayout>